Fixed a tour grid view image layout issue.

--- a/src/main/resources/static/css/tour-edit.css
+++ b/src/main/resources/static/css/tour-edit.css
@@ -122,17 +122,22 @@
     cursor: pointer;
 }
 
-
 .custom-hotspot-target {
-    width: 21px;
-    height: 32px;
-    background: url(../img/marker-light.png) center;
-    background-size: 21px 32px;
-    animation: 3s ease-in-out infinite both anim;
-    transform: translate(0, -18px);
+    width: 14px;
+    height: 14px;
+    animation: 3s ease-in-out infinite both anim1;
+    background-color: rgba(255,255,255,0.2);
+    border: 4px solid rgba(255,255,255,0.4);
+    border-radius: 50%;
 }
+.custom-hotspot-target:hover {
+    animation: 3s ease-in-out infinite both anim2;
+    background-color: rgba(255,255,255,0.0);
+    border: 4px solid rgba(255, 130, 0, 0.85);
+}
+
 .custom-hotspot span {
-    /*visibility: hidden;*/
+    visibility: hidden;
     position: absolute;
     border-radius: 3px;
     background-color: #fff;
@@ -143,10 +148,10 @@
     margin-left: -220px;
     cursor: default;
 }
-/*.custom-hotspot:hover span{*/
-/*visibility: visible;*/
-/*}*/
-/*.custom-hotspot:hover span:after {*/
+.custom-hotspot:hover span{
+    visibility: visible;
+}
+
 .custom-hotspot span:after {
     content: '';
     position: absolute;
@@ -159,24 +164,46 @@
     margin: 0 50%;
 }
 
-@keyframes anim {
+@keyframes anim1 {
     from {
-        transform: scale(1) translate(0, -18px);
+        transform: scale(1);
     }
 
     25% {
-        transform: scale(1.3) translate(0, -18px);
+        transform: scale(1.2);
     }
 
     50% {
-        transform: scale(1) translate(0, -18px);
+        transform: scale(1);
     }
 
     75% {
-        transform: scale(1.3) translate(0, -18px);
+        transform: scale(1.2);
     }
 
     to {
-        transform: scale(1) translate(0, -18px);
+        transform: scale(1);
+    }
+}
+
+@keyframes anim2 {
+    from {
+        transform: scale(1);
+    }
+
+    25% {
+        transform: scale(1.6);
+    }
+
+    50% {
+        transform: scale(1);
+    }
+
+    75% {
+        transform: scale(1.6);
+    }
+
+    to {
+        transform: scale(1);
     }
 }
